--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18",
+    "npm": ">=8.6.0"
   }
 }
