--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "trailingComma": "none",
   "semi": true,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "printWidth": 100
 }
