--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "next": "14.0.4",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
