--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@tanstack/react-query": "^5.15.5",
     "axios": "^1.6.2",
     "next": "14.0.4",
     "node-cache": "^5.1.2",
