--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.15.5",
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "node-cache": "^5.1.2",
     "react": "^18",
