Remove use debounce

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "14.0.4",
     "node-cache": "^5.1.2",
     "react": "^18",
-    "react-dom": "^18",
-    "use-debounce": "^10.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
